--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RecipesApp</string>
+    <string name="failed_message">Failed to get the data</string>
 </resources>
