--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="add_widget">Add widget</string>
     <string name="steps">Steps</string>
     <string name="widget_now">It\'s widget now</string>
+    <string name="thumbnail">Thumbnail</string>
 </resources>
